* выделил регистрацию типов файлов в отдельные .wxs (#1) + добавил второй модуль 10M (#1)

--- a/Sapsan2/Sapsan2CommonFiles.wxs
+++ b/Sapsan2/Sapsan2CommonFiles.wxs
@@ -24,6 +24,20 @@
 				/>
 			</Component>
 			<?endforeach?>
+
+			<Component
+				Id="Product.ico"
+				Directory="APPLICATIONFOLDER"
+				Location="either"
+			>
+				<File
+					Name="Product.ico"
+					KeyPath="yes"
+					Vital="no"
+					Source=".\Icons\Product.ico"
+				/>
+			</Component>
+
 		</ComponentGroup>
 
 	</Fragment>
