* изменил версию пакета на 1.0.1 - для обновления с 1.0.0 указал как minor update

--- a/Sapsan2/Product.wxs
+++ b/Sapsan2/Product.wxs
@@ -39,10 +39,12 @@
 				Property="WIX_DOWNGRADE_DETECTED"
 			/>
 			<UpgradeVersion
+				Minimum="1.0.0"
+				IncludeMinimum="yes"
 				Maximum="$(var.ProductVersion)"
 				IncludeMaximum="no"
-				RemoveFeatures="ALL"
-				Property="WIX_UPGRADE_DETECTED"
+				RemoveFeatures=" "
+				Property="WIX_MINOR_UPGRADE_DETECTED"
 				MigrateFeatures="yes"
 				IgnoreRemoveFailure="no"
 			/>
