--- a/Sapsan2/UnistallOriginalPackageM10.wxs
+++ b/Sapsan2/UnistallOriginalPackageM10.wxs
@@ -7,6 +7,7 @@
 
 	<?define OldPackageId="M10"?>
 	<?define OldPackageUninstallerId="Сапсан 2-10_is1"?>
+	<?define OldPackageUninstallerPause="2"?>
 
 	<Fragment>
 
