--- a/Sapsan2/UnistallOriginalPackageM24.wxs
+++ b/Sapsan2/UnistallOriginalPackageM24.wxs
@@ -7,6 +7,7 @@
 
 	<?define OldPackageId="M24"?>
 	<?define OldPackageUninstallerId="Сапсан 2-24_is1"?>
+	<!--<?define OldPackageUninstallerPause="2"?>-->
 
 	<Fragment>
 
